--- a/PortfolioOct25.html
+++ b/PortfolioOct25.html
@@ -267,7 +267,7 @@ background: #ff7f00;
 <div class="slide-container active">
 <h1>Me</h1>
 <div class="box">
-<div class="image"><img src="" alt="Passionate Coder, Sultana"></div>
+<div class="image"><img src="IMG_20250207_204106027.jpg" alt="Passionate Coder, Sultana"></div>
 <p>Sultana Jahan Tahmina</p>
 <p>| Full-Stack Web Developer |</p>
 <div class="social-icons">
@@ -332,7 +332,7 @@ background: #ff7f00;
 <h1>My Story</h1>
 <div class="box-scroll">
 <div class="container-scroll">
-<div class="image" style="float: right;"><img src="" alt="Passionate Coder, Sultana"></div>
+<div class="image" style="float: right;"><img src="IMG_20250207_204106027.jpg" alt="Passionate Coder, Sultana"></div>
 <p>One day, her father bought a PC for her elder sister as study material. Since childhood, Sultana had been familiar with computer games and other IT experiences. She gradually developed IT skills and was admitted to a Bachelor’s program in CCE (Computer and Communication Engineering) in 2024. Thus, it became her second heart partner ❤️.</p>
 
 <p>Sultana also explored other fields, but IT is something special to her ❤️‍🔥. She envisions herself five years from now — coding, creating websites, hacking ethically(Cybersecurity), and fighting against bad energies at 3 a.m. in a smart, automated, luxurious home surrounded by marine nature. And those automated components will be made by her. 🖥️🔥
