--- a/PortfolioOct25.html
+++ b/PortfolioOct25.html
@@ -21,6 +21,7 @@ height: 1000px;
 padding-left: 24px;
 justify-content: center;
 margin-left: 275px;
+/*transform: scale(3);*/
 }
 .container{
 width: 100%;
